@@ -1,5 +1,7 @@
 
 6/16
+    -Have lot of stuff commented out to just work on ARP packets. Will finish
+       ARP tomorrow
     -Going to start testing my ARP decode/print. will need to refactor, becuase
     	it looks pretty poorly done.
     -Trying to figure out teh variable length on ARP. It says when it is Ethernet
